--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@material-ui/core": "4.11.2",
     "@nivo/core": "0.67.0",
     "@nivo/line": "0.65.1",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.1.0",
-    "@testing-library/user-event": "12.1.10",
+    "@testing-library/jest-dom": "5.11.6",
+    "@testing-library/react": "11.2.2",
+    "@testing-library/dom": "7.29.0",
+    "@testing-library/user-event": "12.6.0",
     "axios": "0.21.0",
     "bigint-money": "1.2.0",
     "currencylayer-client": "^1.1.0",
@@ -19,6 +20,9 @@
     "react-redux": "7.2.2",
     "react-scripts": "4.0.1",
     "redux": "4.0.5"
+  },
+  "resolutions": {
+    "@testing-library/dom": "7.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
